Bug 369619 - Cannot copy from gdrive:// to local
Summary: Cannot copy from gdrive:// to local
Status: RESOLVED FIXED
Alias: None
Product: kio-gdrive
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: 1.0.0
Platform: Compiled Sources Linux
: NOR major
Target Milestone: ---
Assignee: Elvis Angelaccio
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-10-01 18:24 UTC by Elvis Angelaccio
Modified: 2016-10-04 13:44 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.0.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Elvis Angelaccio 2016-10-01 18:24:48 UTC
It's currently not possible to copy gdrive:// URLs to local disk.

Reproducible: Always
Comment 1 Elvis Angelaccio 2016-10-01 18:30:20 UTC
If the gdrive:// file is not in the root, the authentication dialog pops up...
Comment 2 Elvis Angelaccio 2016-10-04 13:37:25 UTC
Git commit 1b4487591b9d2a069658083effe8450b2c3bee1d by Elvis Angelaccio.
Committed on 04/10/2016 at 11:11.
Pushed by elvisangelaccio into branch '1.0'.

Fix broken copy-paste from remote URLs

`joinSublist()` is used by `stat()` to retrieve the path to be used by
`fileToUDSEntry()`, but without the leading slash will break copy-pasting
a remote `gdrive://` URL to local disks.
This happens because `get()` will be called after this broken `stat()`,
so it will receive a broken URL.
FIXED-IN: 1.0.2

M  +1    -1    src/kio_gdrive.cpp

http://commits.kde.org/kio-gdrive/1b4487591b9d2a069658083effe8450b2c3bee1d
Comment 3 Elvis Angelaccio 2016-10-04 13:44:33 UTC
Git commit 09e6bd791cf158e0f4365f06b522765e3137fe5a by Elvis Angelaccio.
Committed on 04/10/2016 at 13:39.
Pushed by elvisangelaccio into branch 'master'.

Fix broken copy-paste from remote URLs

`joinSublist()` is used by `stat()` to retrieve the path to be used by
`fileToUDSEntry()`, but without the leading slash will break copy-pasting
a remote `gdrive://` URL to local disks.
This happens because `get()` will be called after this broken `stat()`,
so it will receive a broken URL.
FIXED-IN: 1.0.2

M  +1    -1    src/kio_gdrive.cpp

http://commits.kde.org/kio-gdrive/09e6bd791cf158e0f4365f06b522765e3137fe5a