Fix broken copy-paste from remote URLs

`joinSublist()` is used by `stat()` to retrieve the path to be used by
`fileToUDSEntry()`, but without the leading slash will break copy-pasting
a remote `gdrive://` URL to local disks.
This happens because `get()` will be called after this broken `stat()`,
so it will receive a broken URL.

BUG: 369619
FIXED-IN: 1.0.2